# ghost

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  init  main.cc  use_sys_libevent.patch
doc/: design-notes.txt
src/: audio_manager.cc  audio_manager.h  blocking_pool.cc  blocking_pool.h  build_config.h  command_line.cc  command_line.h  command_line_pref_store.cc  command_line_pref_store.h  command_line_switches.cc  command_line_switches.h  command_line_unittest.cc  file_path.cc  file_path.h  g_own_ptr.cc  g_own_ptr.h  gst_player.cc  gst_player.h  library.cc  library.h  main.cc  main_window.cc  main_window.h  player.cc  player.h  player_ui.cc  player_ui.h  playlist_pls.cc  playlist_pls.h  playlist_pls_unittest.cc  pref_names.cc  pref_names.h  prefs.cc  prefs.h  string_util.cc  string_util.h  timer.cc  timer.h  timer_posix.cc  timer_win.cc  (+2 more)
src/base/: README.md  base_switches.h  basictypes.h  command_line.cc  command_line.h  command_line_unittest.cc  compiler_specific.h  file_path.cc  file_path.h  file_path_constants.cc  file_util.cc  file_util.h  file_util_posix.cc  file_util_win.cc  logging.cc  logging.h  macros.h  string_util.cc  string_util.h  string_util_constants.cc  utf_string_conversions.h  vlog.cc  vlog.h  vlog_unittest.cc
src/base/files/: file_enumerator.cc  file_enumerator_posix.cc  file_enumerator_win.cc  file_path.cc  file_path.h
src/base/posix/: eintr_wrapper.h
src/base/strings/: string16.cc  string16.h  string16_unittest.cc  string_number_conversions.cc  string_piece.cc  string_piece.h  string_piece_unittest.cc  string_split.cc  string_util.cc  string_util.h  string_util_constants.cc  utf_string_conversion_utils.cc  utf_string_conversion_utils.h  utf_string_conversions.cc  utf_string_conversions.h
src/base/win/: windows_version.cc  windows_version.h
src/test/: run_all_unittests.cc
src/ui/: main_window.cc  main_window.h  ui.cc  ui.h
